2006-02-03 TADA Tadashi <sho@spc.gr.jp>
	* squeeze.rb: delete referer when generate static HTML files.

2006-02-02 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: acceptable numeric ASIN.

2006-01-20 MUTOH Masao  <mutoh@highway.ne.jp>
	* counter.rb:
	  + Improves the speed and stability.
	    - Separate data to counterdata and accessdata.
	    - counterdata is the target of backup, but accessdata doesn't do backup.
	    - change a key of an Array of String to a hash.
	    - Removed "counter.daily_backup" option. Now daily_backup is applied
	      everyday unless this setting.
	    - Add a new "counter.max_keep_access_num" option which you can set 
	      the max number to keep users in the accessdata file to avoid to become
	      too large the accessdata file.
	  + Follow tDiary framework.
	    - Add configuration page.
	  + Misc
	    - Removed "counter.deny_remote_addrs" option.
	    - Added default deny user-agents.

2006-01-23 SHIBATA Hiroshi <h-sbt@nifty.com>
	* ping.rb: fix update option.

2006-01-12  Kazuhiko  <kazuhiko@fdiary.net>
	* recent_trackback3.rb: more revise for mod_ruby.

2005-12-20  Kazuhiko  <kazuhiko@fdiary.net>
	* amazon.rb: display an item name if no image is found and the
	'amazon.nodefault' option is true.

2005-12-07 Lilia <nursery at s8.xrea.com>
	* kw.rb: unescape HTML for google query in default.

2005-12-04 zunda <zunda at freeshell.org>
	* highlight.rb: apply_plugin before counting sanchor

2005-12-04 Lilia <nursery at s8.xrea.com>
	* kw.rb: support title attribute and add some escapes in HTML.

2005-12-04 Taku YASUI <tach at debian.or.jp>
	* kw.rb: support UTF-8.

2005-12-04 N.KASHIJUKU <n-kashi at whi.m-net.ne.jp>
	* image.rb: swap width and height in image_info method.

2005-12-01  SHIBATA Hiroshi  <h-sbt@nifty.com>
	* makerss.rb: insert link of Tsukkomi in RSS.

2005-11-21  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: move to contrib/util/rast-search/.

2005-11-18  Kazuhiko  <kazuhiko@fdiary.net>