@@ -1,3 +1,7 @@
+2006-02-07 MUTOH Masao
+	* Revert the log file name from counter2.log to counter.log.
+	  Reported by Ken-ichi Mito.
+
 2006-02-03 TADA Tadashi <sho@spc.gr.jp>
 	* squeeze.rb: delete referer when generate static HTML files.
 
